resolved merge threads